
[metadata]
name = netsquid-boardgames
version = 0.0.1
author = Yash Shrivastava
author-email = yash@maxsash.com
description = For multiplayer board games with a Task Master based on quantum operations.
license = MIT
home-page = https://github.com/Maxsash/nsboard

[netsquid]
pypi-server = pypi.netsquid.org
